# brainspresso

./: README.md  conda.yaml  setup.cfg  setup.py
braindataprep/: __init__.py
braindataprep/actions/: action.py
braindataprep/datasets/ABIDE/I/: __init__.py  bidsifier.py  bidsifier_nitrc.py  bidsifier_xnat.py  bidsify.py  command.py  download.py  download_nitrc.py  download_xnat.py  keys.py
braindataprep/datasets/ABIDE/I/templates/: README  dataset_description.json
braindataprep/datasets/ABIDE/II/: __init__.py  bidsifier.py  bidsify.py  command.py  download.py  keys.py
braindataprep/datasets/ABIDE/II/templates/: README  abide2_parse_scan_param.py  dataset_description.json
braindataprep/datasets/ADHD200/: __init__.py  command.py  download.py  keys.py
braindataprep/datasets/ADNI/I/: __init__.py  command.py  download.py
braindataprep/datasets/COBRE/: bidsifier.py  bidsify.py  command.py  download.py
braindataprep/datasets/COBRE/templates/: T1w.json  bold.json
braindataprep/datasets/CoRR/: __init__.py  command.py  download.py
braindataprep/datasets/CoRR/templates/: corr_parse_scan_param.py  dataset_description.json
braindataprep/datasets/GSP/: command.py  download.py
braindataprep/datasets/IXI/: bidsifier.py  command.py
braindataprep/datasets/OASIS/I/: bidsifier.py  command.py
braindataprep/datasets/OASIS/II/: bidsifier.py  command.py
braindataprep/datasets/OASIS/III/: bidsifier.py  bidsify.py  command.py  download.py  keys.py
braindataprep/datasets/OASIS/III/templates/: dataset_description.json  participants.json
braindataprep/datasets/OpenNeuro/: __init__.py  command.py  download.py
braindataprep/download/: downloader.py  incomplete.py  manager.py  remote.py
braindataprep/sources/: dataverse.py  openneuro.py  xnat.py
braindataprep/utils/: digests.py  dl.py  log.py  tabular.py
braindataprep/utils/prot/: fcon.py
braindataprep/utils/prot/siemens/: vd.py
brainspresso/: __init__.py  cli.py
brainspresso/actions/: __init__.py  action.py  file.py  writers.py
brainspresso/datasets/ABIDE/I/: bidsifier.py  bidsifier_nitrc.py  bidsifier_xnat.py  bidsify.py  command.py  download.py  download_nitrc.py  download_xnat.py  keys.py
brainspresso/datasets/ABIDE/I/templates/: participants.json
brainspresso/datasets/ABIDE/II/: bidsifier.py  bidsify.py  command.py  download.py  keys.py
brainspresso/datasets/ABIDE/II/templates/: abide2_parse_scan_param.py  participants.json
brainspresso/datasets/ADHD200/: command.py  download.py  keys.py
brainspresso/datasets/ADNI/I/: command.py  download.py
brainspresso/datasets/COBRE/: __init__.py  bidsifier.py  bidsify.py  command.py  download.py
brainspresso/datasets/COBRE/templates/: README  dataset_description.json  participants.json
brainspresso/datasets/CoRR/: command.py  download.py
brainspresso/datasets/CoRR/templates/: README  corr_parse_scan_param.py
brainspresso/datasets/GSP/: __init__.py  command.py  download.py
brainspresso/datasets/IXI/: __init__.py  bidsifier.py  bidsify.py  command.py  download.py
brainspresso/datasets/IXI/templates/: README  dataset_description.json  participants.json
brainspresso/datasets/IXI/templates/Guys/: PDw.json  T1w.json  T2w.json  angio.json  dwi.json  scanner.json
brainspresso/datasets/IXI/templates/HH/: PDw.json  T1w.json  T2w.json  angio.json  dwi.json  scanner.json
brainspresso/datasets/IXI/templates/IOP/: T1w.json  T2w.json  angio.json  dwi.json
brainspresso/datasets/OASIS/I/: __init__.py  bidsifier.py  bidsify.py  command.py  download.py
brainspresso/datasets/OASIS/I/templates/: README  T1w.json  dataset_description.json  participants.json
brainspresso/datasets/OASIS/II/: __init__.py  bidsifier.py  bidsify.py  command.py  download.py
brainspresso/datasets/OASIS/II/templates/: README  dataset_description.json  participants.json  sessions.json
brainspresso/datasets/OASIS/III/: __init__.py  bidsifier.py  bidsify.py  command.py  download.py  keys.py
brainspresso/datasets/OpenNeuro/: command.py  download.py
brainspresso/download/: __init__.py  constants.py  downloader.py  incomplete.py  manager.py  remote.py  test.py
brainspresso/freesurfer/: bidsify.py  io.py  lookup.py
brainspresso/sources/: dataverse.py  nitrc.py  openneuro.py  xnat.py
brainspresso/utils/: dl.py  io.py  keys.py  log.py  path.py  tsv.py  ui.py  vol.py
brainspresso/utils/prot/siemens/: vb.py
brainspresso/utils/schemas/bids/: mri_sidecar.yaml
(+191 files in other folders)
