[metadata]
name = brainspresso
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Download, bidsify and preprocess public datasets
long_description = file:README.md
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/brainspresso

[options]
python_requires = >= 3.10
install_requires =
    requests        # HTTP requests
    aiohttp         # Async HTTP requests
    aiofiles        # Async file i/o
    fsspec[http,s3] # S3 filesystem
    fasteners       # File locks
    cyclopts        # CLI
    nibabel         # Neuroimaging formats
    pyout           # Display download status in a nice table
    humanize        # Convert various numbers into human form

[options.extras_require]
abide1 =
abide2 =
    pymupdf         # Parse PDF
abide =
    brainspresso[abide1]
    brainspresso[abide2]
adni1 =
adni2 =
adni3 =
adnigo =
adnidod =
adni =
    brainspresso[adni1]
    brainspresso[adni2]
    brainspresso[adni3]
    brainspresso[adnigo]
    brainspresso[adnidod]
cobre =
corr =
    pymupdf         # Parse PDF
gsp =
ixi =
    xlrd            # Excel xls
oasis1 =
    openpyxl        # Excel xlsx
oasis2 =
    openpyxl        # Excel xlsx
oasis3 =
oasis =
    brainspresso[oasis1]
    brainspresso[oasis2]
    brainspresso[oasis3]
all =
    brainspresso[abide]
    brainspresso[cobre]
    brainspresso[corr]
    brainspresso[ixi]
    brainspresso[oasis]
openneuro = datalad
mpi-leipzig = brainspresso[openneuro]

[options.package_data]
* =
    freesurfer/lut/*
    datasets/*/templates/*
    datasets/*/templates/*/*
    datasets/*/templates/*/*/*
    datasets/*/*/templates/*
    datasets/*/*/templates/*/*
    datasets/*/*/templates/*/*/*

[options.entry_points]
console_scripts =
    brainspresso = brainspresso.cli:main
    bx = brainspresso.cli:main
